Fixed navbar spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ h1 {
     background-repeat: no-repeat;
     color: #1d3b00;
     padding: 10px;
-    /* margin: 1vh 0%; */
+    margin: 0;
     width: 100vw;
     font-size: 2em;
     font-family: 'Amita', cursive;;
@@ -33,10 +33,12 @@ h1 {
 
 .navbar {
     width: 100vw;
-    margin-bottom: 0;
+    margin: 5px 0;
 }
 
 ul {
+    width: 80vw;
+    padding: 0 5vw;
     display: flex;
     flex-direction: row;
     flex-basis: 100%;
@@ -71,9 +73,11 @@ li {
     display: flex;
     width: 80vw;
     height: 80vh;
-    margin: 5vh 10vw;
-    padding: 5vh 10vw;
+    margin: 2vh 10vw;
+    padding: 2vh 5vw;
     flex-direction: column;
+    /* align-content: center; */
+    text-align: center;
 }
 
 @media only screen and (min-width: 407px) {
